--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "victorian-plumbing",
+  "name": "victorian-plumbing-tech-test",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
